--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
                         <img src="toxiclogo.png" alt="">
                     </a>
                 </div>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="" class="nav-link current">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Store</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Music</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">About</a>
+                    </li>
+                </ul>
                 <label class="openmenu">
                 <p>☰</p>
                     <input class="toggle" type="checkbox"/>
@@ -40,7 +57,7 @@
                             <a href="" class="nav-link">About</a>
                         </li>
                     </ul>
-                </label>
+                </label> <!--LABEL ÄR PROBLEMET-->
             </nav>
         </div>
     </header>
@@ -74,8 +91,6 @@
             <div class="music-grid">
                 <div class="music-grid-item album-one">
                     <h1>BEAUTIFUL HAVOC</h1>
-                    
-                    <!--IMAGE-->
                 </div>
                 <div class="music-grid-item album-two">
                     <h1>TRAGEDY++</h1>
