--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
                 </div>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="" class="nav-link current">Home</a>
+                        <a href="index.html" class="nav-link current">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Store</a>
+                        <a href="store.html" class="nav-link">Store</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Music</a>
+                        <a href="#about-music_id" class="nav-link">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Shows</a>
+                        <a href="#music_id" class="nav-link">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">About</a>
+                        <a href="#about_id" class="nav-link">About</a>
                     </li>
                 </ul>
                 <label class="openmenu">
@@ -42,22 +42,22 @@
                     <input class="toggle" type="checkbox"/>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="" class="nav-link current">Home</a>
+                            <a href="index.html" class="nav-link current">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Store</a>
+                            <a href="store.html" class="nav-link">Store</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Music</a>
+                            <a href="#about-music_id" class="nav-link">Music</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">Shows</a>
+                            <a href="#music_id" class="nav-link">Shows</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link">About</a>
+                            <a href="#about_id" class="nav-link">About</a>
                         </li>
                     </ul>
-                </label> <!--LABEL ÄR PROBLEMET-->
+                </label> 
             </nav>
         </div>
     </header>
@@ -69,25 +69,26 @@
                 <h1>New merch</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, quam. Voluptatem, distinctio neque nihil quo aliquid a tempore dolor accusantium tenetur? Pariatur laudantium excepturi a earum doloremque quibusdam sint modi.</p>
                 <div class="storebtn">
-                    <a href="#" class="btn">STORE</a>
+                    <a href="store.html" class="btn">STORE</a>
                 </div>
             </div>
-            <!--IMAGE OF MERCH 3 SLIDE-->
-            <div class="merch-grid">
-                <div class="merch-grid-item hoodie-three">
+            <div class="openstore-grid">
+                <div class="openstore-grid-item store-one">
                     
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="music">
+    <section class="music" id="music_id">
         <div class="container">
             <div class="title">
                 <h1>Tour info</h1>
                 <p>Unfortunatly we have cancelled our tour plans due to the COVID situation. We will update you when this changes and while you wait we have 3 new albums ready for order.</p>
+                <div class="musicbtn">
+                    <a href="#" class="btn">MUSIC STORE</a>
+                </div>
             </div>
-
             <div class="music-grid">
                 <div class="music-grid-item album-one">
                     <h1>BEAUTIFUL HAVOC</h1>
@@ -97,11 +98,47 @@
                 </div>
                 <div class="music-grid-item album-three">
                     <h1>ALL DOGS GO TO HEAVEN</h1>
+                    
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="about-m" id="about-music_id">
+        <div class="container">
+            <div class="about-music">
+                <div class="about-box">
+                    <p>$uicideBoy$'s debut album delivers a dark and grimy vibe and offers a great listen for anyone, it just works.</p>
+                    <h3>”</h3>
+                </div>
+                <div class="about-critics">
+                    <img src="theneedledrop.jpg" alt="">
+                    <h1>TheNeedleDrop</h1>
+                </div>
+                <a class="btn" href="https://www.youtube.com/watch?v=ktwe3lIKpAs&has_verified=1" target="_blank" rel="noopener">CHECK OUT OUR MUSIC</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-us" id="about_id">
+        <div class="container">
+            <div class="title">
+                <h3>who are</h3>
+                <h1>$uicideboy$</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus aperiam laudantium tenetur ducimus harum, expedita animi eos, minima sint excepturi voluptas eligendi cumque veritatis natus dolorum totam error nisi cupiditate?</p>
+            </div>
+            <div class="about-grid">
+                <div class="about-grid-item">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo necessitatibus delectus, nemo explicabo vel facere nobis cupiditate nihil asperiores ex pariatur corporis, veniam iste alias iusto dolore, voluptate laboriosam ipsa? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem atque ex omnis saepe enim consectetur nisi ipsa eos delectus totam, reprehenderit itaque nam cum nesciunt, dolore molestiae. Sit, aut cum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, beatae iusto ab quia voluptates itaque eligendi doloribus, saepe quaerat officiis odit vitae, placeat dolorem enim nulla esse corporis illo minus.</p>    
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum est consequuntur, dolore aut commodi quisquam, cumque fuga, porro nisi dignissimos ex! Dolorem perspiciatis aliquam nisi officia nihil modi voluptas consequatur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi pariatur vel voluptas quibusdam dolorem id quae! Voluptas, minima hic? Obcaecati, quidem magni voluptatem esse nisi possimus provident fuga soluta omnis.</p>              
+                </div>
+            </div>
+            <a class="btn" href="">STORE</a>
+            <a class="btn" href="">MUSIC STORE</a>
+            <a class="btn" href="https://www.instagram.com/suicideboys/" target="_blank" rel="noopener">SOCIAL</a>
+        </div>
+
+    </section>
     <footer>
         <p>©2020 TOXIC INC All rights reserved.</p>
     </footer>
