--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="openstore-grid">
-                <div class="openstore-grid-item store-one">
+                <div class="openstore-grid-item shop-one">
                     
                 </div>
             </div>
@@ -133,9 +133,26 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum est consequuntur, dolore aut commodi quisquam, cumque fuga, porro nisi dignissimos ex! Dolorem perspiciatis aliquam nisi officia nihil modi voluptas consequatur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi pariatur vel voluptas quibusdam dolorem id quae! Voluptas, minima hic? Obcaecati, quidem magni voluptatem esse nisi possimus provident fuga soluta omnis.</p>              
                 </div>
             </div>
-            <a class="btn" href="">STORE</a>
-            <a class="btn" href="">MUSIC STORE</a>
-            <a class="btn" href="https://www.instagram.com/suicideboys/" target="_blank" rel="noopener">SOCIAL</a>
+            <div class="scrim-grid">
+                <div class="scrim-grid-item suicide-boys">
+
+                </div>
+                
+            </div>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link current">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="store.html" class="nav-link">Store</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.youtube.com/watch?v=ktwe3lIKpAs&has_verified=1" target="_blank" rel="noopener">Music</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Info</a>
+                </li>
+            </ul>
         </div>
 
     </section>
