info page add, store completed and double menu add

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+  name="description"           
+  content="SUICIDEBOYS OFFICIAL WEBSITE AND STORE">
     <title>Toxic Inc | Home</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -108,7 +111,7 @@
         <div class="container">
             <div class="about-music">
                 <div class="about-box">
-                    <p>$uicideBoy$'s debut album delivers a dark and grimy vibe and offers a great listen for anyone, it just works.</p>
+                    <p>Toxic's debut album delivers a dark and grimy vibe and offers a great listen for anyone, it just works.</p>
                     <h3>”</h3>
                 </div>
                 <div class="about-critics">
@@ -124,7 +127,7 @@
         <div class="container">
             <div class="title">
                 <h3>who are</h3>
-                <h1>$uicideboy$</h1>
+                <h1>Toxic</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus aperiam laudantium tenetur ducimus harum, expedita animi eos, minima sint excepturi voluptas eligendi cumque veritatis natus dolorum totam error nisi cupiditate?</p>
             </div>
             <div class="about-grid">
@@ -150,7 +153,7 @@
                     <a class="nav-link" href="https://www.youtube.com/watch?v=ktwe3lIKpAs&has_verified=1" target="_blank" rel="noopener">Music</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Info</a>
+                    <a href="info.html" class="nav-link">Info</a>
                 </li>
             </ul>
         </div>
