--- a/store.html
+++ b/store.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+  name="description"           
+  content="SUICIDEBOYS OFFICIAL MERCH, MUSIC AND ALBUM STORE">
     <title>Toxic Inc | Home</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -31,7 +33,7 @@
                         <a href="#" class="nav-link">Albums</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">Info</a>
+                        <a href="info.html" class="nav-link">Info</a>
                     </li>
                 </ul>
                 <label class="openmenu">
@@ -48,10 +50,10 @@
                             <a href="#" class="nav-link">Albums</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Info</a>
+                            <a href="info.html" class="nav-link">Info</a>
                         </li>
                     </ul>
-                </label> 
+                </label>  
             </nav>
         </div>
     </header>
@@ -103,14 +105,16 @@
                 <a href="#" class="nav-link">Albums</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Info</a>
+                <a href="info.html" class="nav-link">Info</a>
             </li>
-        </ul>
+        </ul> 
         <footer>
             <p>©2020 TOXIC INC All rights reserved.</p>
         </footer> 
     </section>
-    
+<!--CIRCLE THE ITEMS IN STORE HOODIES AND ALLBUMS MAKE THEM LOOK MORE LIKE INFO-->    
     
 </body>
 </html>
+
+
